# Adaptive_Response_Engine

./: .env  README.md  demo.py  gradio_frontend.py  main.py  mcp_main.py  pyproject.toml  requirements.txt  start_frontend.py
agents/: a2a_coordinator.py  adaptive_response_engine.py  iteration_controller.py  quality_review_agent.py  query_analysis_agent.py  rag_agent.py  response_agent.py  response_generation_agent.py  search_agent.py
mcp_services/mcp_qdrant/: qdrant_serve.py
mcp_services/mcp_search/: duck_search.py
mcp_services/mcp_website/: headless_browser.py
