[project]
name = "adaptive-response-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0",
    "ddgs>=9.5.1",
    "fastapi>=0.116.1",
    "gradio==5.34.0",
    "mcp[cli]>=1.12.3",
    "ntplib>=0.4.0",
    "openai>=1.98.0",
    "playwright>=1.54.0",
    "qdrant-client>=1.15.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "tika>=3.1.0",
    "trafilatura>=2.0.0",
]
